Completed Put with all users fields. (#46)
Fix logout not working because of token syntax.
