# api/models/user.js
@@ -1,6 +1,5 @@
 const Sequelize = require('sequelize');
 
-
 module.exports = function(sequelize, DataTypes){
     var Users =  sequelize.define('users', {
     	id: {
@@ -12,6 +11,13 @@ module.exports = function(sequelize, DataTypes){
   		lastName: { type: Sequelize.STRING, field: 'lastname' },
 		birthDate: { type: Sequelize.DATEONLY, field: 'birthdate' }, //Pass a string like 02-20-1972
 		email: { type: Sequelize.STRING, field: 'email' },
+		bio: { type: Sequelize.STRING, field: 'bio' },
+		address1: { type: Sequelize.STRING, field: 'address1' },
+		address2: { type: Sequelize.STRING, field: 'address2' },
+		city: { type: Sequelize.STRING, field: 'city' },
+		state: { type: Sequelize.STRING, field: 'state' },
+		zip: { type: Sequelize.STRING, field: 'zip' },
+		weight: { type: Sequelize.SMALLINT, field: 'weight' },
 		hashword: { type: Sequelize.STRING, field: 'hashword' }
 	},
 	{
