# api/swagger/swagger.yaml
@@ -185,6 +185,20 @@ definitions:
       password:
         type: "string"
         format: password
+      bio:
+        type: "string"
+      address1:
+        type: "string"
+      address2:
+        type: "string"
+      city:
+        type: "string"
+      state:
+        type: "string"
+      zip:
+        type: "string"
+      weight:
+        type: "integer"
   Credentials:
     type: "object"
     properties:
